**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- bam(...,sparse=TRUE) [1.8-5]
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.
	

1.8-12

- negbin() with a grid search for `theta' is no longer supported - use 
  'nb' instead.

	
1.8-11

* bam(...,discrete=TRUE) can now handle matrix arguments to smooths (and hence
  linear functional terms).

* bam(...,discrete=TRUE) bug fix in fixed sp handling.

* bam(...,discrete = TRUE) db.drho reparameterization fix, fixing nonsensical 
  edf2. Also bam edf2 limited to maximum of edf1.

* smoothCon rescaling of S changed to use efficient matrix norm in place of
  relatively slow computation involving model matrix crossproduct.  

* bam aic corrected for AR model if present.
	
* Added select=TRUE argument to 'bam'.

* Several discrete prediction fixes including improved thread safety.

* bam/gam name gcv.ubre field by "method".

* gam.side modified so that if a smooth has 'side.constrain==FALSE' it is 
  neither constrained, nor used in the computation of constraints for other
  terms (the latter part being new). Very limited impact!

* No longer checks if SUPPORT_OPENMP defined in Rconfig.h, but only if _OPENMP
  defined. No change in actual behaviour. 

1.8-10

** 'multinom' family implemented for multinomial logistic regression.

* predict.bam now defaults to using efficient discrete prediction methods 
  for models fit using discrete covariate methods (bam(...,discrete=TRUE)). 

* with bam(...,discrete=TRUE) terms like s(a,b,bs="re") had wrong p-value 
  computation applied, as a result of being treated as tensor product terms.
  Fixed.

* minor tweak to soap basis setup to avoid rounding error leading to 'approx'
  occasionally producing NA's with fixed boundaries.

* misc.c:rwMatrix made thread safe (had been using R_chk_calloc, which isn't). 

* some upgrading for 64bit addressing.
